Trying again to commit with an inline message.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 
 	<body>
 		<p>These words are placeholders for more words.</p>
+		<p>These are even MORE words because I needed to make more changes. Mooooooore text.</p>
 	</body>
 </html>
