added img and jason branch

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	</head>
 
 	<body>
+		<img src="http://www.fabiovisentin.com/photography/photo/30/tropical-beach-wallpaper-06443.jpg" style="width: 400px;">
 		<p>These words are placeholders for more words.</p>
 		<p>These are even MORE words because I needed to make more changes. Mooooooore text.</p>
+
 	</body>
 </html>
