--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<body>
 		<img src="http://www.fabiovisentin.com/photography/photo/30/tropical-beach-wallpaper-06443.jpg" style="width: 400px;">
-		<p>These words are placeholders for more words.</p>
+		<p>These words are placeholders for more words. (BREAK)</p>
 		<p>These are even MORE words because I needed to make more changes. Mooooooore text.</p>
 		<img src="http://media-cache-ec0.pinimg.com/736x/0e/a8/47/0ea8479372f530c3620c8aeb6615810b.jpg" style="width: 400px;">
 
