--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Getting To Know GitHub</title>
-		<!--Fox branch merge-->
+		<!--I'm changing a thing-->
 	</head>
 
 	<body>
