--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Getting To Know GitHub</title>
-		<!--I'm changing a thing-->
+		<!--Sarah put these wors in Master-->
 	</head>
 
 	<body>
