added another fox

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Getting To Know GitHub</title>
-		<!--I'm changing a thing-->
+		<!--Changing again-->
 	</head>
 
 	<body>
@@ -10,6 +10,7 @@
 		<p>These words are placeholders for more words. (BREAK)</p>
 		<p>These are even MORE words because I needed to make more changes. Mooooooore text.</p>
 		<img src="http://media-cache-ec0.pinimg.com/736x/0e/a8/47/0ea8479372f530c3620c8aeb6615810b.jpg" style="width: 400px;">
+		<img src="http://2.bp.blogspot.com/-fK3T27K_qYs/UI3gA89r6EI/AAAAAAAAGs4/Paoir9nOsy8/s1600/red-fox2.jpg" style="width: 400px;">
 
 	</body>
 </html>
